--- a/3growbox_qtwidget/GrowBoxDesktop/mainwindow.ui
+++ b/3growbox_qtwidget/GrowBoxDesktop/mainwindow.ui
@@ -660,6 +660,19 @@ padding: 8px;}</string>
        </property>
       </widget>
      </widget>
+     <widget class="QPushButton" name="pushButton_CONNECT_3">
+      <property name="geometry">
+       <rect>
+        <x>670</x>
+        <y>130</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>POŁĄCZ</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab2_cam">
      <attribute name="title">
